--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   <link rel="stylesheet" href="css/mdb.ecommerce.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
+  <!-- Sweet alert-->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <!-- Animated.js-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
 </head>
 
 <body class="skin-light row">
@@ -44,27 +48,27 @@
     </section>
     <section class="formatos">
       <h2 class="text-center titulo-formatos">FORMATOS</h2>
-      <div class="formato fms">
+      <div class="formato fms waves-light">
         <h3>FMS</h3>
         <p>¡Nuevo formato 2020!</p>
       </div>
-      <div class="formato 12-patrones">
+      <div class="formato 12-patrones waves-light">
         <h3>12 PATRONES</h3>
         <p>2x2 - 4x4 - 8x8 - libre</p>
       </div>
-      <div class="formato 8-patrones">
+      <div class="formato 8-patrones waves-light">
         <h3>8 PATRONES</h3>
         <p>2x2 - 4x4 - 8x8 - libre</p>
       </div>
-      <div class="formato 6-patrones">
+      <div class="formato 6-patrones waves-light">
         <h3>6 PATRONES</h3>
         <p>2x2 - 4x4 - Minuto Libres</p>
       </div>
-      <div class="formato 4-patrones">
+      <div class="formato 4-patrones waves-light">
         <h3>4 PATRONES</h3>
         <p>2x2 - 4x4 - 8x8 - presentaciones FMS</p>
       </div>
-      <div class="formato 2-patrones">
+      <div class="formato 2-patrones waves-light">
         <h3>2 PATRONES</h3>
         <p>12x12 - libre</p>
       </div>
