empezando con menu FMS

--- a/formatos/fms/menu/menu.html
+++ b/formatos/fms/menu/menu.html
@@ -7,7 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>rapspreadsheet</title>
     <!-- MDB icon -->
-    <link rel="icon" href="../../img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../../img/favicon.ico" type="image/x-icon">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <!-- Google Fonts -->
@@ -16,13 +16,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
     <!-- Material Design Bootstrap -->
-    <link rel="stylesheet" href="../../css/mdb.min.css">
+    <link rel="stylesheet" href="../../../css/mdb.min.css">
     <!-- Ecommerce styles -->
-    <link rel="stylesheet" href="../../css/mdb.ecommerce.min.css">
+    <link rel="stylesheet" href="../../../css/mdb.ecommerce.min.css">
     <!-- Your custom styles (optional) -->
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/menu.css">
     <!-- Sweet alert-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- Animated.js-->
@@ -36,21 +36,13 @@
     </div>
 
     <div class="col container-fluid">
-
-      <nav class="navbar">
-        <a id="btn-volver" class="btn-floating btn-xl btn-default" href="../../index.html"><i class="fas fa-arrow-left"></i></a>
-        <h1 class="text-center">Formato FMS</h1>
-        <h5 id="typed" class="text-center"></h5>
+      <nav class="fixed-top navbar text-center">
+        <a id="btn-volver" class="btn-floating btn-xl btn-default" href="../fms.html"><i class="fas fa-arrow-left"></i></a>
+        <h1 class="">Menu</h1>
+        <h5 id="typed" class=""></h5>
       </nav>
 
-      <div class="formulario">
-        <!-- Large input -->
-
-        <input id="p1" class="form-control form-control-lg text-center" type="text" placeholder="Participante 1" maxlength="10">
-        <br>
-        <input id="p2" class="form-control form-control-lg text-center" type="text" placeholder="Participante 2" maxlength="10">
-
-      </div>
+      
 
       <div class="text-center comenzar">
         <button  id="btn-comenzar" type="button" class="btn orange darken-2 btn-rounded text-light">Comenzar Batalla</button>
@@ -74,19 +66,19 @@
     <!-- End your project here-->
 
     <!-- jQuery -->
-    <script type="text/javascript" src="../../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../../../js/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="../../js/popper.min.js"></script>
+    <script type="text/javascript" src="../../../js/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../../../js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="../../js/mdb.min.js"></script>
+    <script type="text/javascript" src="../../../js/mdb.min.js"></script>
     <!-- MDB eCommerce -->
-    <script type="text/javascript" src="../../js/mdb.ecommerce.min.js"></script>
+    <script type="text/javascript" src="../../../js/mdb.ecommerce.min.js"></script>
     <!-- Typed.js -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <!-- Your custom scripts (optional) -->
-    <script type="text/javascript" src="js/fms.js"></script>
+    <script type="text/javascript" src="../js/menu.js"></script>
 
   </body>
 </html>
