Easy mode y hard mode terminado

--- a/formatos/fms/menu/menu.html
+++ b/formatos/fms/menu/menu.html
@@ -36,24 +36,25 @@
     </div>
 
     <div class="col container-fluid">
-      <nav class="fixed-top navbar text-center">
-        <a id="btn-volver" class="btn-floating btn-xl btn-default" href="../fms.html"><i class="fas fa-arrow-left"></i></a>
-        <h1 class="">FMS</h1>
-        <h5 id="typed" class=""></h5>
+      <nav class="navbar text-center">
+        <h4 id="p1"></h4>
+        <h4>Vs</h4>
+        <h4 id="p2"></h4>
       </nav>
+      <h5 id="typed" class="text-center"></h5>
       <div class="menu">
-        <a class="tema btn purple-gradient" href="easyMode.html" id="easyMode" style="background-color: rgba(145, 145, 145, 0.51);">Easy Mode</a><br>
-        <a class="tema btn purple-gradient disabled" href="hardMode.html" id="hardMode" style="background-color: rgba(145, 145, 145, 0.51);">Hard Mode</a><br>
-        <a class="tema btn purple-gradient disabled" href="tematicas.html" id="tematicas" style="background-color: rgba(145, 145, 145, 0.51);">Temáticas</a><br>
-        <a class="tema btn purple-gradient disabled" href="personajes.html" id="personajes" style="background-color: rgba(145, 145, 145, 0.51);">Personajes</a><br>
-        <a class="tema btn purple-gradient disabled" href="libre.html" id="libre" style="background-color: rgba(145, 145, 145, 0.51);">Libre</a><br>
-        <a class="tema btn purple-gradient disabled" href="deluxe.html" id="deluxe" style="background-color: rgba(145, 145, 145, 0.51);">Deluxe</a>
+        <a class="tema btn disabled" href="easyMode.html" id="easyMode" style="background-color: rgba(145, 145, 145, 0.51);">Easy Mode</a><br>
+        <a class="tema btn disabled" href="hardMode.html" id="hardMode" style="background-color: rgba(145, 145, 145, 0.51);">Hard Mode</a><br>
+        <a class="tema btn disabled" href="tematicas.html" id="tematicas" style="background-color: rgba(145, 145, 145, 0.51);">Temáticas</a><br>
+        <a class="tema btn disabled" href="personajes.html" id="personajes" style="background-color: rgba(145, 145, 145, 0.51);">Random Mode</a><br>
+        <a class="tema btn disabled" href="libre.html" id="libre" style="background-color: rgba(145, 145, 145, 0.51);">Libre</a><br>
+        <a class="tema btn disabled" href="deluxe.html" id="deluxe" style="background-color: rgba(145, 145, 145, 0.51);">Deluxe</a>
       </div>
 
 
 
-      <div class="text-center comenzar">
-        <button  id="btn-comenzar" type="button" class="btn purple darken-2 btn-rounded text-light">Terminar Batalla</button>
+      <div class="text-center terminar">
+        <button  id="btn-terminar" type="button" class="btn purple darken-2 btn-rounded text-light">Terminar Batalla</button>
       </div>
 
       <footer class="text-center">
