cambios en index y margin menu

--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
         <p>¡Nuevo formato 2020!</p>
       </div>
       <div class="formato 12-patrones waves-light">
-        <h3>12 PATRONES</h3>
+        <h3>12 Compases</h3>
         <p>2x2 - 4x4 - 8x8 - libre</p>
       </div>
       <div class="formato 8-patrones waves-light">
-        <h3>8 PATRONES</h3>
+        <h3>8 Compases</h3>
         <p>2x2 - 4x4 - 8x8 - libre</p>
       </div>
       <div class="formato 6-patrones waves-light">
-        <h3>6 PATRONES</h3>
+        <h3>6 Compases</h3>
         <p>2x2 - 4x4 - Minuto Libres</p>
       </div>
       <div class="formato 4-patrones waves-light">
-        <h3>4 PATRONES</h3>
+        <h3>4 Compases</h3>
         <p>2x2 - 4x4 - 8x8 - presentaciones FMS</p>
       </div>
       <div class="formato 2-patrones waves-light">
-        <h3>2 PATRONES</h3>
+        <h3>2 Compases</h3>
         <p>12x12 - libre</p>
       </div>
 
