FMS casi terminada

--- a/formatos/fms/menu/menu.html
+++ b/formatos/fms/menu/menu.html
@@ -46,7 +46,7 @@
         <a class="tema btn disabled" href="easyMode.html" id="easyMode" style="background-color: rgba(145, 145, 145, 0.51);">Easy Mode</a><br>
         <a class="tema btn disabled" href="hardMode.html" id="hardMode" style="background-color: rgba(145, 145, 145, 0.51);">Hard Mode</a><br>
         <a class="tema btn disabled" href="tematicas.html" id="tematicas" style="background-color: rgba(145, 145, 145, 0.51);">Temáticas</a><br>
-        <a class="tema btn disabled" href="personajes.html" id="personajes" style="background-color: rgba(145, 145, 145, 0.51);">Random Mode</a><br>
+        <a class="tema btn disabled" href="randomMode.html" id="randomMode" style="background-color: rgba(145, 145, 145, 0.51);">Random Mode</a><br>
         <a class="tema btn disabled" href="libre.html" id="libre" style="background-color: rgba(145, 145, 145, 0.51);">Libre</a><br>
         <a class="tema btn disabled" href="deluxe.html" id="deluxe" style="background-color: rgba(145, 145, 145, 0.51);">Deluxe</a>
       </div>
@@ -54,7 +54,7 @@
 
 
       <div class="text-center terminar">
-        <button  id="btn-terminar" type="button" class="btn purple darken-2 btn-rounded text-light disabled">Terminar Batalla</button>
+        <button  id="btn-terminarBatalla" type="button" class="btn purple darken-2 btn-rounded text-light disabled">Terminar Batalla</button>
       </div>
 
       <footer class="text-center">
