FMS funciona falta diseno

--- a/formatos/fms/menu/tematicas.html
+++ b/formatos/fms/menu/tematicas.html
@@ -250,6 +250,7 @@
 
       <!-- Vuelta -->
       <h3 class="text-center">Vuelta</h3>
+      <p class="text-center">Comienza &rarr;</p>
       <section class="row patrones">
 
         <div class="col player1">
