--- a/formatos/fms/menu/resultados.html
+++ b/formatos/fms/menu/resultados.html
@@ -470,9 +470,65 @@
           </div>
         </div>
 
-        <div class="text-center terminar">
-          <button  id="btn-terminar" type="button" class="btn orange darken-2 btn-rounded text-light">Nueva Batalla</button>
+        <div class="publicidad-res-1">
+
         </div>
+      </section>
+
+      <div class="terminar">
+        <button  id="btn-terminar" type="button" class="btn orange darken-2 btn-rounded text-light">Nueva Batalla</button>
+      </div>
+      <div class="publicidad-res-2">
+
+      </div>
+      <section class="redes">
+        <!-- Footer -->
+        <footer class="page-footer font-small pt-4">
+
+          <!-- Footer Elements -->
+          <div class="container">
+
+            <!-- Social buttons -->
+            <ul class="list-unstyled list-inline text-center">
+              <li class="list-inline-item">
+                <a class="btn-floating btn-fb mx-1">
+                  <i class="fab fa-facebook-f"> </i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-tw mx-1">
+                  <i class="fab fa-twitter"> </i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-gplus mx-1">
+                  <i class="fab fa-google-plus-g "> </i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-li mx-1">
+                  <i class="fab fa-linkedin-in"> </i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-dribbble mx-1">
+                  <i class="fab fa-dribbble"> </i>
+                </a>
+              </li>
+            </ul>
+            <!-- Social buttons -->
+
+          </div>
+          <!-- Footer Elements -->
+
+          <!-- Copyright -->
+          <div class=" text-center py-3"><span class="" id="fecha"></span> ©
+            <a href="https://www.instagram.com/rapspreadsheet/?hl=es-la"> rapspreadsheet.com</a>
+          </div>
+          <!-- Copyright -->
+
+        </footer>
+        <!-- Footer -->
       </section>
     </div> <!-- fin container-fluid-->
 
