todo el sitio funciona Ok

--- a/formatos/fms/menu/deluxe.html
+++ b/formatos/fms/menu/deluxe.html
@@ -149,7 +149,12 @@
 
         </div> <!-- fin player2 -->
       </section>
+      <!-- Espacio publicitario -->
+      <div class="publicidad-de">
 
+      </div>
+
+      <h5 class="text-center">Sigue &rarr;</h5>
       <section class="row patrones">
         <div class="col player1">
           <!-- patron 4-->
@@ -464,9 +469,7 @@
 
 
       </section>
-      <div class="publicidad-em">
 
-      </div>
       <div class="text-center terminar">
         <button  id="btn-terminar" type="button" class="btn purple darken-2 btn-rounded text-light">Continuar</button>
       </div>
