--- a/formatos/fms/menu/libre.html
+++ b/formatos/fms/menu/libre.html
@@ -336,9 +336,11 @@
 
 
       </section>
-      <div class="publicidad-rm-1">
+      <!-- Espacio publicitario-->
+      <div class="publicidad-li-medio">
 
       </div>
+
       <h4 class="text-center">Vuelta</h4>
       <!-- Vuelta -->
       <section class="row patrones">
@@ -644,9 +646,10 @@
 
       </section>
 
-      <div class="publicidad-rm-2">
+        <!-- Espacio publicitario-->
+        <div class="publicidad-li-footer">
 
-      </div>
+        </div>
 
       <div class="text-center terminar">
         <button  id="btn-terminar" type="button" class="btn purple darken-2 btn-rounded text-light">Continuar</button>
