--- a/formatos/fms/menu/randomMode.html
+++ b/formatos/fms/menu/randomMode.html
@@ -243,14 +243,10 @@
 
       </section>
 
-      <div class="publicidad-te-1">
+      <div class="publicidad-rm">
 
       </div>
 
-
-      <div class="publicidad-te-2">
-
-      </div>
       <div class="text-center terminar">
         <button  id="btn-terminar" type="button" class="btn purple darken-2 btn-rounded text-light">Continuar</button>
       </div>
