--- a/index.html
+++ b/index.html
@@ -39,13 +39,17 @@
   <div class="col container-fluid">
     <nav class="fixed-top navbar text-center">
       <h1 class="">rapspreadsheet</h1>
-      <h5 class="">typed.js</h5>
+      <h5 id="typed"></h5>
     </nav>
     <section class="presentacion">
       <p class="text-center">Votá tus competencias favoritas</p>
-      <p class="text-center">con nuestra web-app.</p>
-      <p class="text-center">agregar otra frase aca</p>
+      <p class="text-center">Comparti los resultados</p>
+      <p class="text-center">con tus amigo! </p>
     </section>
+    <!-- Espacio publicitario -->
+    <div class="publicidad-index-header">
+
+    </div>
     <section class="formatos">
       <h2 class="text-center titulo-formatos">FORMATOS</h2>
       <div class="formato fms waves-light">
@@ -74,15 +78,9 @@
       </div>
 
     </section>
+    <div class="publicidad-index-footer">
 
-    <section class="testimonios">
-
-    </section>
-
-    <section class="video">
-
-    </section>
-
+    </div>
     <!-- Footer -->
     <footer class="page-footer font-small pt-4">
 
@@ -147,6 +145,8 @@
   <script type="text/javascript" src="js/mdb.min.js"></script>
   <!-- MDB eCommerce -->
   <script type="text/javascript" src="js/mdb.ecommerce.min.js"></script>
+  <!-- Typed.js -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
   <!-- Your custom scripts (optional) -->
   <script type="text/javascript" src="js/index.js"></script>
 
