--- a/formatos/fms/menu/menu.html
+++ b/formatos/fms/menu/menu.html
@@ -51,6 +51,10 @@
         <a class="tema btn disabled" href="deluxe.html" id="deluxe" style="background-color: rgba(145, 145, 145, 0.51);">Deluxe</a>
       </div>
 
+      <!-- Espacio publicitario -->
+      <div class="publicidad-fms-menu">
+
+      </div>
 
 
       <div class="text-center terminar">
