--- a/formatos/fms/menu/resultados.html
+++ b/formatos/fms/menu/resultados.html
@@ -437,7 +437,14 @@
       </section>
 
       <section class="final">
-
+        <div class="row">
+          <div class="col">
+            <h3 class="text-center" id="p1-final"></h3>
+          </div>
+          <div class="col">
+            <h3 class="text-center" id="p2-final"></h3>
+          </div>
+        </div>
         <div class="row">
           <div class="col">
             <h3 class="text-center" id="resFinalesP1"></h3>
