--- a/formatos/12_p/resultados12p.html
+++ b/formatos/12_p/resultados12p.html
@@ -97,10 +97,10 @@
       </div>
 
       <!-- Espacio Publicitario-->
-      <div class="p12-publicidad-1">
+      <div class="publicidad-12-res">
 
       </div>
-      
+
 
     <div class="volver text-center">
 
