--- a/formatos/12_p/votacion12p.html
+++ b/formatos/12_p/votacion12p.html
@@ -463,7 +463,7 @@
 
 
       </section>
-      <div class="publicidad-em">
+      <div class="publicidad-12-vot">
 
       </div>
       <div class="text-center terminar">
