--- a/formatos/2_p/votacion.html
+++ b/formatos/2_p/votacion.html
@@ -208,9 +208,11 @@
 
 
       </section>
-      <div class="publicidad-6-vot">
+      <!-- Espacio publicitario -->
+      <div class="publicidad-2-vot">
 
       </div>
+      
       <div class="text-center terminar">
         <button  id="btn-terminar" type="button" class="btn purple darken-2 btn-rounded text-light">Continuar</button>
       </div>
