--- a/formatos/4_p/4_p.html
+++ b/formatos/4_p/4_p.html
@@ -51,7 +51,10 @@
         <input id="p2" class="form-control form-control-lg text-center" type="text" placeholder="Participante 2" maxlength="10">
 
       </div>
-
+      <!-- Espacio publicitario -->
+      <div class="publicidad-4-inicio">
+        
+      </div>
       <div class="text-center comenzar">
         <button  id="btn-comenzar" type="button" class="btn orange darken-2 btn-rounded text-light">Comenzar Batalla</button>
       </div>
