--- a/formatos/8_p/8_p.html
+++ b/formatos/8_p/8_p.html
@@ -52,6 +52,10 @@
 
       </div>
 
+      <!-- Espacio publicitario -->
+      <div class="publicidad-8-inicio">
+        
+      </div>
       <div class="text-center comenzar">
         <button  id="btn-comenzar" type="button" class="btn orange darken-2 btn-rounded text-light">Comenzar Batalla</button>
       </div>
