--- a/formatos/8_p/votacion.html
+++ b/formatos/8_p/votacion.html
@@ -361,7 +361,8 @@
 
 
       </section>
-      <div class="publicidad-em">
+      <!-- Espacio publicitario -->
+      <div class="publicidad-8-vot">
 
       </div>
       <div class="text-center terminar">
