--- a/formatos/fms/menu/resultados.html
+++ b/formatos/fms/menu/resultados.html
@@ -477,7 +477,7 @@
           </div>
         </div>
 
-        <div class="publicidad-res-1">
+        <div class="publicidad-fms-res">
 
         </div>
       </section>
@@ -485,9 +485,7 @@
       <div class="terminar">
         <button  id="btn-terminar" type="button" class="btn orange darken-2 btn-rounded text-light">Nueva Batalla</button>
       </div>
-      <div class="publicidad-res-2">
-
-      </div>
+      
       <section class="redes">
         <!-- Footer -->
         <footer class="page-footer font-small pt-4">
