--- a/formatos/4_p/votacion.html
+++ b/formatos/4_p/votacion.html
@@ -260,9 +260,11 @@
 
 
       </section>
-      <div class="publicidad-6-vot">
+      <!-- Espacio publicitario -->
+      <div class="publicidad-4-vot">
 
       </div>
+      
       <div class="text-center terminar">
         <button  id="btn-terminar" type="button" class="btn purple darken-2 btn-rounded text-light">Continuar</button>
       </div>
