--- a/formatos/6_p/votacion.html
+++ b/formatos/6_p/votacion.html
@@ -223,7 +223,7 @@
             <option value="4">4</option>
           </select>
           <label class="mdb-main-label text-dark text-center">Patrón 6</label>
-        
+
 
         </div> <!-- fin player2 -->
       </section>
@@ -310,7 +310,8 @@
 
 
       </section>
-      <div class="publicidad-em">
+      <!-- Espacio Publicitario -->
+      <div class="publicidad-6-vot">
 
       </div>
       <div class="text-center terminar">
