--- a/formatos/12_p/12_p.html
+++ b/formatos/12_p/12_p.html
@@ -27,6 +27,16 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- Animated.js-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143820322-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-143820322-4');
+    </script>
+    
   </head>
 
   <body class="row skin-light">
@@ -54,7 +64,7 @@
 
       <!-- Espacio publicitario-->
       <div class="publicidad-12-inicio">
-        
+
       </div>
       <div class="text-center comenzar">
         <button  id="btn-comenzar" type="button" class="btn orange darken-2 btn-rounded text-light">Comenzar Batalla</button>
