--- a/formatos/fms/menu/resultados.html
+++ b/formatos/fms/menu/resultados.html
@@ -27,6 +27,16 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- Animated.js-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143820322-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-143820322-4');
+    </script>
+    
   </head>
 
   <body class="row skin-light">
@@ -485,7 +495,7 @@
       <div class="terminar">
         <button  id="btn-terminar" type="button" class="btn orange darken-2 btn-rounded text-light">Nueva Batalla</button>
       </div>
-      
+
       <section class="redes">
         <!-- Footer -->
         <footer class="page-footer font-small pt-4">
