random mode temrinado

--- a/formatos/fms/menu/randomMode.html
+++ b/formatos/fms/menu/randomMode.html
@@ -36,7 +36,7 @@
 
       gtag('config', 'UA-143820322-4');
     </script>
-    
+
   </head>
 
   <body class="row skin-light">
@@ -98,6 +98,8 @@
             <option value="4">4</option>
           </select>
           <label class="mdb-main-label text-dark text-center">Patrón 2</label>
+
+          <div class="hr"></div>
           <!-- PAtron 3 -->
           <select id="patron3p1" class="mdb-select md-form colorful-select dropdown-primary">
             <option value="0">0</option>
@@ -125,6 +127,64 @@
           </select>
           <label class="mdb-main-label text-dark text-center">Patrón 4</label>
 
+          <div class="hr"></div>
+
+          <!-- patron 5-->
+          <select id="patron5p1" class="mdb-select md-form colorful-select dropdown-primary">
+            <option value="0">0</option>
+            <option value="0.5">0.5</option>
+            <option value="1">1</option>
+            <option value="1.5">1.5</option>
+            <option value="2">2</option>
+            <option value="2.5">2.5</option>
+            <option value="3">3</option>
+            <option value="3.5">3.5</option>
+            <option value="4">4</option>
+
+          </select>
+          <label class="mdb-main-label text-dark text-center">Patrón 5</label>
+          <!-- PAtron 6 -->
+          <select id="patron6p1" class="mdb-select md-form colorful-select dropdown-primary">
+            <option value="0">0</option>
+            <option value="0.5">0.5</option>
+            <option value="1">1</option>
+            <option value="1.5">1.5</option>
+            <option value="2">2</option>
+            <option value="2.5">2.5</option>
+            <option value="3">3</option>
+            <option value="3.5">3.5</option>
+            <option value="4">4</option>
+          </select>
+          <label class="mdb-main-label text-dark text-center">Patrón 6</label>
+
+          <div class="hr"></div>
+
+          <!-- PAtron 7 -->
+          <select id="patron7p1" class="mdb-select md-form colorful-select dropdown-primary">
+            <option value="0">0</option>
+            <option value="0.5">0.5</option>
+            <option value="1">1</option>
+            <option value="1.5">1.5</option>
+            <option value="2">2</option>
+            <option value="2.5">2.5</option>
+            <option value="3">3</option>
+            <option value="3.5">3.5</option>
+            <option value="4">4</option>
+          </select>
+          <label class="mdb-main-label text-dark text-center">Patrón 7</label>
+          <!-- PAtron 8 -->
+          <select id="patron8p1" class="mdb-select md-form colorful-select dropdown-primary">
+            <option value="0">0</option>
+            <option value="0.5">0.5</option>
+            <option value="1">1</option>
+            <option value="1.5">1.5</option>
+            <option value="2">2</option>
+            <option value="2.5">2.5</option>
+            <option value="3">3</option>
+            <option value="3.5">3.5</option>
+            <option value="4">4</option>
+          </select>
+          <label class="mdb-main-label text-dark text-center">Patrón 8</label>
 
         </div> <!-- Fin player 1 -->
 
@@ -156,6 +216,9 @@
             <option value="4">4</option>
           </select>
           <label class="mdb-main-label text-dark text-center">Patrón 2</label>
+
+          <div class="hr"></div>
+
           <!-- PAtron 3 -->
           <select id="patron3p2" class="mdb-select md-form colorful-select dropdown-primary">
             <option value="0">0</option>
@@ -182,6 +245,65 @@
             <option value="4">4</option>
           </select>
           <label class="mdb-main-label text-dark text-center">Patrón 4</label>
+
+          <div class="hr"></div>
+
+          <!-- patron 5-->
+          <select id="patron5p2" class="mdb-select md-form colorful-select dropdown-primary">
+            <option value="0">0</option>
+            <option value="0.5">0.5</option>
+            <option value="1">1</option>
+            <option value="1.5">1.5</option>
+            <option value="2">2</option>
+            <option value="2.5">2.5</option>
+            <option value="3">3</option>
+            <option value="3.5">3.5</option>
+            <option value="4">4</option>
+
+          </select>
+          <label class="mdb-main-label text-dark text-center">Patrón 5</label>
+          <!-- PAtron 6 -->
+          <select id="patron6p2" class="mdb-select md-form colorful-select dropdown-primary">
+            <option value="0">0</option>
+            <option value="0.5">0.5</option>
+            <option value="1">1</option>
+            <option value="1.5">1.5</option>
+            <option value="2">2</option>
+            <option value="2.5">2.5</option>
+            <option value="3">3</option>
+            <option value="3.5">3.5</option>
+            <option value="4">4</option>
+          </select>
+          <label class="mdb-main-label text-dark text-center">Patrón 6</label>
+
+          <div class="hr"></div>
+
+          <!-- PAtron 7 -->
+          <select id="patron7p2" class="mdb-select md-form colorful-select dropdown-primary">
+            <option value="0">0</option>
+            <option value="0.5">0.5</option>
+            <option value="1">1</option>
+            <option value="1.5">1.5</option>
+            <option value="2">2</option>
+            <option value="2.5">2.5</option>
+            <option value="3">3</option>
+            <option value="3.5">3.5</option>
+            <option value="4">4</option>
+          </select>
+          <label class="mdb-main-label text-dark text-center">Patrón 7</label>
+          <!-- PAtron 8 -->
+          <select id="patron8p2" class="mdb-select md-form colorful-select dropdown-primary">
+            <option value="0">0</option>
+            <option value="0.5">0.5</option>
+            <option value="1">1</option>
+            <option value="1.5">1.5</option>
+            <option value="2">2</option>
+            <option value="2.5">2.5</option>
+            <option value="3">3</option>
+            <option value="3.5">3.5</option>
+            <option value="4">4</option>
+          </select>
+          <label class="mdb-main-label text-dark text-center">Patrón 8</label>
 
         </div> <!-- fin player2 -->
       </section>
