--- a/formatos/fms/menu/resultados.html
+++ b/formatos/fms/menu/resultados.html
@@ -36,7 +36,7 @@
 
       gtag('config', 'UA-143820322-4');
     </script>
-    
+
   </head>
 
   <body class="row skin-light">
@@ -468,7 +468,7 @@
         </div>
 
         <div class="">
-          <h1 class="text-center" id="resultado"></h1>
+          <h1 class="text-center text-uppercase" id="resultado"></h1>
         </div>
 
         <div class="">
@@ -511,23 +511,26 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn-floating btn-tw mx-1">
-                  <i class="fab fa-twitter"> </i>
+                <a class="btn-floating btn-yt mx-1">
+                  <i class="fab fa-youtube"></i>
                 </a>
               </li>
+
               <li class="list-inline-item">
-                <a class="btn-floating btn-gplus mx-1">
-                  <i class="fab fa-google-plus-g "> </i>
+                <a class="btn-floating btn-reddit mx-3" href="https://www.instagram.com/rapspreadsheet/?hl=es-la">
+                  <i class="fab fa-instagram"></i>
                 </a>
+                <span class="counter" id="contador-ig"></span>
               </li>
+
               <li class="list-inline-item">
                 <a class="btn-floating btn-li mx-1">
                   <i class="fab fa-linkedin-in"> </i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn-floating btn-dribbble mx-1">
-                  <i class="fab fa-dribbble"> </i>
+                <a class="btn-floating btn-git mx-1">
+                  <i class="fab fa-github"></i>
                 </a>
               </li>
             </ul>
@@ -537,7 +540,7 @@
           <!-- Footer Elements -->
 
           <!-- Copyright -->
-          <div class=" text-center py-3"><span class="" id="fecha"></span> ©
+          <div class=" text-center py-3"><span class="text-light" id="fecha"></span> ©
             <a href="https://www.instagram.com/rapspreadsheet/?hl=es-la"> rapspreadsheet.com</a>
           </div>
           <!-- Copyright -->
