--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <div class="publicidad-index-footer">
 
     </div>
+
     <!-- Footer -->
     <footer class="page-footer font-small pt-4">
 
@@ -106,23 +107,26 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn-floating btn-tw mx-1">
-              <i class="fab fa-twitter"> </i>
+            <a class="btn-floating btn-yt mx-1">
+              <i class="fab fa-youtube"></i>
             </a>
           </li>
+
           <li class="list-inline-item">
-            <a class="btn-floating btn-gplus mx-1">
-              <i class="fab fa-google-plus-g "> </i>
+            <a class="btn-floating btn-reddit mx-3" href="https://www.instagram.com/rapspreadsheet/?hl=es-la">
+              <i class="fab fa-instagram"></i>
             </a>
+            <span class="counter" id="contador-ig"></span>
           </li>
+
           <li class="list-inline-item">
             <a class="btn-floating btn-li mx-1">
               <i class="fab fa-linkedin-in"> </i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn-floating btn-dribbble mx-1">
-              <i class="fab fa-dribbble"> </i>
+            <a class="btn-floating btn-git mx-1">
+              <i class="fab fa-github"></i>
             </a>
           </li>
         </ul>
